# rust-analyzer-mcp

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  test-mcp-server.py
.github/workflows/: release.yml  rust.yml
benches/: concurrent_requests.rs
src/: config.rs  lib.rs  main.rs
src/diagnostics/: mod.rs
src/lsp/: client.rs  connection.rs  handlers.rs  mod.rs
src/mcp/: handlers.rs  mod.rs  server.rs  tools.rs
src/protocol/: lsp.rs  mcp.rs  mod.rs
test-project/: Cargo.toml
test-project-diagnostics/: Cargo.toml
test-project-diagnostics/src/: clean.rs  errors.rs  lib.rs  warnings.rs
test-project/src/: diagnostics_test.rs  lib.rs  main.rs  simple_error.rs  types.rs  unformatted.rs  utils.rs
test-support/: Cargo.toml
test-support/src/: fixtures.rs  isolated_project.rs  lib.rs  shared_client.rs  test_client.rs  timeouts.rs  workspace_ready.rs
test-support/src/ipc/: client.rs  mod.rs  server.rs
tests/: integration_tests.rs  property_tests.rs  stress_tests.rs  unit_tests.rs
tests/common/: fixtures.rs  mock_lsp.rs  mod.rs  server_pool.rs  test_client.rs
tests/integration/: diagnostics.rs  diagnostics_ipc.rs  mcp_server_test.rs  shared_test.rs  snapshot_tests.rs  test_ipc.rs
tests/property/: protocol_fuzzing.rs
tests/stress/: concurrent_requests.rs  concurrent_requests_ipc.rs
tests/unit/protocol/: mod.rs  request_tests.rs  tool_tests.rs
